# bridgeit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md
.planning/codebase/: phase-1-tech.md
.planning/phase-2a.5-stackly-rename/: GOAL.md  PLAN.md
.planning/phase-2b-public-launch/: DEMO_SCRIPT.md  GOAL.md  PLAN.md  PLAN_CHECK.md  RESEARCH.md
scripts/: e2e_smoke.py  install-debugging-tools.ps1
src/debugbridge/: __init__.py  __main__.py  cli.py  env.py  models.py  server.py  session.py  tools.py
src/debugbridge/fix/: briefing.py  claude_runner.py  dispatcher.py  worktree.py
src/stackly/: __init__.py
tests/: conftest.py  test_env.py  test_fix_briefing.py  test_fix_cli.py  test_fix_dispatcher.py  test_fix_patch_writer.py  test_fix_worktree.py  test_models.py  test_parsers.py  test_session_integration.py
tests/fixtures/crash_app/: CMakeLists.txt  build.ps1  crash.cpp
